<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/tabHeaderText"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvTagName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/mc1k"
            android:textColor="@color/bottom_text_color" />

        <ImageView
            android:id="@+id/iv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:src="@drawable/info"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llNetworkMobileUsage"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#77DADADA" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/header_name"
                android:textColor="@color/header_text"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/header_value"
                android:textColor="@color/header_text"
                android:textSize="14sp"
                android:gravity="left"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:id="@+id/tvSignalStrenghtmaxstrength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uid"
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text=""
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type"
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text=""
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/memory"
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMemory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text=""
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/page"
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text=""
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/block_size"
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text=""
                android:textColor="@color/home_item_bg"
                android:textSize="12sp"
                android:textStyle="bold" />
        </TableRow>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/tabHeaderText"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/block_value"
                android:textColor="@color/bottom_text_color" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@drawable/arrow_down"
                android:contentDescription="@string/header_name" />
        </RelativeLayout>

        <za.co.immedia.pinnedheaderlistview.PinnedHeaderListView
            android:id="@+id/lvMifareClassic1k"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white" >
        </za.co.immedia.pinnedheaderlistview.PinnedHeaderListView>
    </LinearLayout>

</LinearLayout>